// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminActionsButtons Admin has controller role should render correctly: controllerRole 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-1xa9bwv"
  >
    <a
      class="chakra-button css-vueqt9"
      data-testid="force-transfer-button"
      href="/"
    >
      Force transfer
    </a>
    <button
      aria-controls="menu-list-:r1:"
      aria-expanded="false"
      aria-haspopup="menu"
      class="chakra-button chakra-menu__menu-button css-1el7xnb"
      data-testid="dropdown-actions-button"
      id="menu-button-:r1:"
      type="button"
    >
      <span
        class="css-xl71ch"
      >
        <svg
          class="chakra-icon css-kpbtv0"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M140,128a12,12,0,1,1-12-12A12,12,0,0,1,140,128ZM128,72a12,12,0,1,0-12-12A12,12,0,0,0,128,72Zm0,112a12,12,0,1,0,12,12A12,12,0,0,0,128,184Z"
          />
        </svg>
      </span>
    </button>
    <div
      class="css-r6z5ec"
      style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
    >
      <div
        aria-orientation="vertical"
        class="chakra-menu__menu-list css-1ds7t99"
        data-testid="dropdown-actions-menu"
        id="menu-list-:r1:"
        role="menu"
        style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
        tabindex="-1"
      >
        <div
          class="chakra-stack css-6ekxde"
        >
          <a
            class="chakra-menu__menuitem css-1xsc1dv"
            data-index="0"
            data-testid="force-redeem-button"
            href="/"
            id="menu-list-:r1:-menuitem-:r2:"
            role="menuitem"
            tabindex="-1"
          >
            <p
              class="css-1a1j0go"
            >
              Force redeem
            </p>
          </a>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`AdminActionsButtons Admin has minter role should render correctly: minterRole 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-1xa9bwv"
  >
    <a
      class="chakra-button css-vueqt9"
      data-testid="mint-button"
      href="/"
    >
      Mint
    </a>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`AdminActionsButtons Admin has pauser role should render correctly: pauserRole 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-1xa9bwv"
  >
    <button
      aria-controls="menu-list-:rd:"
      aria-expanded="false"
      aria-haspopup="menu"
      class="chakra-button chakra-menu__menu-button css-1el7xnb"
      data-testid="dropdown-actions-button"
      id="menu-button-:rd:"
      type="button"
    >
      <span
        class="css-xl71ch"
      >
        <svg
          class="chakra-icon css-kpbtv0"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M140,128a12,12,0,1,1-12-12A12,12,0,0,1,140,128ZM128,72a12,12,0,1,0-12-12A12,12,0,0,0,128,72Zm0,112a12,12,0,1,0,12,12A12,12,0,0,0,128,184Z"
          />
        </svg>
      </span>
    </button>
    <div
      class="css-r6z5ec"
      style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
    >
      <div
        aria-orientation="vertical"
        class="chakra-menu__menu-list css-1ds7t99"
        data-testid="dropdown-actions-menu"
        id="menu-list-:rd:"
        role="menu"
        style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
        tabindex="-1"
      >
        <div
          class="chakra-stack css-6ekxde"
        >
          <div
            class="chakra-stack css-w0rccg"
          >
            <div
              class="chakra-stack css-1nf0e9g"
            >
              <p
                class="css-1i1oq6k"
              >
                Danger zone
              </p>
            </div>
            <p
              class="css-ncp2jn"
            >
              Pause security token
            </p>
            <div
              class="chakra-stack css-1txf1ih"
            >
              <div
                class="css-70qvj9"
              >
                <label
                  class="chakra-switch css-ghot30"
                  data-testid="pauser-button"
                >
                  <input
                    aria-disabled="false"
                    class="chakra-switch__input"
                    style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                    type="checkbox"
                    value=""
                  />
                  <span
                    aria-hidden="true"
                    class="chakra-switch__track css-18ihtw3"
                  >
                    <span
                      class="chakra-switch__thumb css-9hrcr1"
                    />
                  </span>
                </label>
                <label
                  class="chakra-form__label css-1ii0m7i"
                >
                  Active
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`AdminActionsButtons should render correctly: defaultAdminRole 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-1xa9bwv"
  />
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
